# AILegalAssistance

./: README.md  Sample Demand Letter.md  docker-compose.yml  legal_case_management  main.py  pyproject.toml
app/: agent_runner.py  case_data.py  data_loader.py  db_pg.py  generator.py  mcp.py  mcp_server.py  rag.py  schemas.py  util.py  utils.py
docker/init/: 01_schema.sql  02_data.sql
outputs/: d
templates/: demand_letter.j2
